<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pharm Tech</string>
    <string name="medicine_name_textview">Medicine Name</string>
    <string name="show_detail_button">Show Detail</string>
    <string name="audio_button">Play Audio</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="filter_menu_button">Filter Menu</string>
    <string name="submit_button_quiz">Submit</string>
    <string name="next_button"><![CDATA[ > ]]></string>
    <string name="previous_button"><![CDATA[ < ]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search Drugs</string>
    <string name="flip_instruction">(Long click generic name to flip card)</string>
    <string name="clear_search">Clear Search</string>
    <string name="legal_title_label">Legal Disclaimers etc. - PharmTech app\n</string>
    <string name="about_title_label">About - PharmTech app\n</string>
    <string name="about_prev_author">
        \nLast Updated: Fall 2017\n\n
        Updates made by:\n
        Nelson Tse\n
        Nils Johnson\n
        Sebastian Vasco\n\n

        Icon Artwork from:
        \n\'shareicon.net\'
        \n\'iconfinder.net\'
        \n\'icons8.com\'
        \n\nRaw Files from: \'http://clincalc.com\'\n\n

        Previous Authors:\n
        Saadia Achouham\n
        Ruchelly P. Almeida\n
        Oleksii Butakov\n
        Lounis Idir\n
        Evan Y. Liu\n
        Shradha Luintel\n
        Karlisha McQuiter\n
        Thomas A. Newell\n
        Alexandre Pereira\n
        David C. Powell\n
        James Sacchetti\n
        Prakrit Saetang\n
        Fikir G. Yilma\n
        Shipeng Yu\n
        Edgard Zafack\n

    </string>

    <string name="legal_disclaimer">\nDisclaimer\nThis mobile app was created by Bunker Hill
        Community College Android Mobile App students for informational and educational use
        only. This app is intended for use by students of the Bunker Hill Community College
        Pharmacy Technology Program and is a pilot application. Please be advised that this
        content may include errors.</string>
    <string name="legal_funding">\nFunding\nThis workforce solution was funded by a grant awarded
        by the U.S. Department of Labor’s Employment and Training Administration. The solution
        was created by the grantee and does not necessarily reflect the official position of
        the U.S. Department of labor. The Department of Labor makes no guarantees, warranties,
        or assurances of any kind, express or implied, with respect to such information,
        including any information on linked sites and including, but not limited to, accuracy
        of the information or its completeness, timeliness, usefulness, adequacy, continued
        availability, or ownership.</string>
    <string name="legal_opportunity">\nEqual Opportunity\nIt is against the law for this recipient
        of Federal financial assistance to discriminate on the basis of race, color, religion, sex,
        national origin, age, disability, political affiliation or belief, or citizenship/status as
        a lawfully admitted immigrant authorized to work in the U.S.  Auxiliary aids and services
        are available upon request to individuals with disabilities. If you think you have been
        subjected to discrimination, you may file a complaint within 180 days with either the
        recipient’s Equal Opportunity Officer or the Director, Civil Rights Center (CRC), U.S.
        Department of Labor, 200 Constitution Avenue NW, Room N-4123, Washington, DC.</string>


    <string name="quiz_question"> "What is the %1s of %2s (%3s)?</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drug_of_day_title">Drug of The Day</string>
    <string name="btn_close_drug_of_day">Close</string>
    <string name="btn_show_drug_of_day">Show Me This Card</string>
    <string name="retake_quiz">Retake Quiz</string>
</resources>