<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

    <ScrollView
        android:id="@+id/about_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/legalView"
                android:fontFamily="sans-serif-medium"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_title_label"
                style="?android:listSeparatorTextViewStyle"/>

            <TextView
                android:id="@+id/legal_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_disclaimer"/>
            <TextView
                android:id="@+id/legal_funding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_funding"/>
            <TextView
                android:id="@+id/legal_opportunity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_opportunity"/>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
